Fix mobile meet the team alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -955,25 +955,26 @@ iframe {
     left: 50%;
   }
   .content-section__image-holder:nth-of-type(1) {
-    transform: translate(-100%, 0px);
+    transform: translate(-140%, 0px);
   }
   .content-section__image-holder:nth-of-type(2) {
-    transform: translate(-100%, 75px);
+    transform: translate(-140%, 75px);
   }
   .content-section__image-holder:nth-of-type(3) {
-    transform: translate(-100%, 150px);
+    transform: translate(-140%, 150px);
   }
   .content-section__image-holder:nth-of-type(4) {
-    transform: translate(-100%, 225px);
+    transform: translate(-140%, 225px);
   }
   .content-section__image-holder:nth-of-type(5) {
-    transform: translate(-100%, 300px);
+    transform: translate(-140%, 300px);
   }
   .content-section__image-text-name--bill{
-    transform: translate(0%, 15px);
+    transform: translate(-8%, 25%);
+    font-size: 25px;
   }
   .content-section__image-text-title--bill {
-    transform: translate(160%, -10px);
+    transform: translate(-40%, 15%);
     font-size: 15px;
   }
   .content-section__image-text-name {
@@ -984,7 +985,7 @@ iframe {
     justify-content: left;
   }
   .content-section__image-text-title {
-    transform: translate(184%, -115%);
+    transform: translate(84%, -90%);
     width: 200%;
     font-size: 15px;
     font-weight: 800;
